# katas

./: .gitignore  README.md  agile-developer.xml  build.gradle  pom.xml
gradle/wrapper/: gradle-wrapper.properties
katas-java/: .editorconfig  build.gradle
katas-java/src/test/java/day1/: LeapYearTests.java
katas-java/src/test/java/day2/: TextMungerTests.java
katas-java/src/test/java/day3/: PrimeFactorizationTests.java
katas-java/src/test/java/demo/: FizzBuzzTests.java  Roman2NumeralsTests.java  RomanNumeralsTests.java
katas-java/src/test/java/dojo/: FamilyTaxTests.java
katas-js/: SpecRunner.html
katas-js/spec/: LeapYearsSpec.js  PrimeFactorizationSpec.js  TextMungerSpec.js
katas-js/src/: HelloWorld.js  LeapYears.js
katas-python/: pyproject.toml
katas-python/app/: leap_year.py
katas-python/tests/: test_leap_year.py  test_prime_factorization.py  test_text_munger.py
src/test/java/fizzbuzz/: FizzBuzzTests.java
src/test/java/template/: MyKataTest.java
